<package>
  <!--REQUIRED HEADER-->
  <name>catch</name>
  <description>
    catch
  </description>
  <version>1.5.7</version>
  <maintainer email="foo@bar.com">Foo Bar</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_optional</buildtool_depend>
</package>
